--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -74,49 +74,49 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="hEe-zr-kUm">
-                                <rect key="frame" x="0.0" y="91" width="375" height="687"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="hEe-zr-kUm" userLabel="Vertical Stack View">
+                                <rect key="frame" x="0.0" y="91" width="375" height="623"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="nfA-PB-tnz">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="229"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="nfA-PB-tnz" userLabel="Horizontal Stack View">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="207.66666666666666"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U2Y-su-TXm" userLabel="Slow Button">
-                                                <rect key="frame" x="0.0" y="0.0" width="187.66666666666666" height="229"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="187.66666666666666" height="207.66666666666666"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" image="Slow"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ucM-PB-XEs" userLabel="Fast Button">
-                                                <rect key="frame" x="187.66666666666663" y="0.0" width="187.33333333333337" height="229"/>
+                                                <rect key="frame" x="187.66666666666663" y="0.0" width="187.33333333333337" height="207.66666666666666"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" image="Fast"/>
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="uER-Sx-CU3">
-                                        <rect key="frame" x="0.0" y="229" width="375" height="229"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="uER-Sx-CU3" userLabel="Horizontal Stack View">
+                                        <rect key="frame" x="0.0" y="207.66666666666669" width="375" height="207.66666666666669"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="158-9S-G1b" userLabel="HighPitch Button">
-                                                <rect key="frame" x="0.0" y="0.0" width="187.66666666666666" height="229"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="187.66666666666666" height="207.66666666666666"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" image="HighPitch"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u4Y-Rg-5ha" userLabel="LowPitch Button">
-                                                <rect key="frame" x="187.66666666666663" y="0.0" width="187.33333333333337" height="229"/>
+                                                <rect key="frame" x="187.66666666666663" y="0.0" width="187.33333333333337" height="207.66666666666666"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" image="LowPitch"/>
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="P81-J8-2Ud">
-                                        <rect key="frame" x="0.0" y="458" width="375" height="229"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="P81-J8-2Ud" userLabel="Horizontal Stack View">
+                                        <rect key="frame" x="0.0" y="415.33333333333331" width="375" height="207.66666666666669"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2bI-zl-0a7" userLabel="Echo Button">
-                                                <rect key="frame" x="0.0" y="0.0" width="187.66666666666666" height="229"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="187.66666666666666" height="207.66666666666666"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" image="Echo"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h3W-xJ-ve0" userLabel="Reverb Button">
-                                                <rect key="frame" x="187.66666666666663" y="0.0" width="187.33333333333337" height="229"/>
+                                                <rect key="frame" x="187.66666666666663" y="0.0" width="187.33333333333337" height="207.66666666666666"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" image="Reverb"/>
                                             </button>
@@ -124,11 +124,25 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iJ3-D9-hru" userLabel="Stop Button">
+                                <rect key="frame" x="155.66666666666666" y="714" width="64" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="mBL-Rg-QBX"/>
+                                    <constraint firstAttribute="width" constant="64" id="vTL-xS-xQK"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="Stop"/>
+                                <connections>
+                                    <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="t2Z-fc-sxt"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="JI4-3l-zbO"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="hEe-zr-kUm" firstAttribute="bottom" secondItem="JI4-3l-zbO" secondAttribute="bottom" id="UTU-SN-vWo"/>
+                            <constraint firstItem="iJ3-D9-hru" firstAttribute="centerX" secondItem="eL1-UF-gt9" secondAttribute="centerX" id="Dr0-7E-ipU"/>
+                            <constraint firstItem="hEe-zr-kUm" firstAttribute="bottom" secondItem="iJ3-D9-hru" secondAttribute="top" id="UTU-SN-vWo"/>
+                            <constraint firstItem="iJ3-D9-hru" firstAttribute="bottom" secondItem="JI4-3l-zbO" secondAttribute="bottom" id="Z1w-jY-6dk"/>
                             <constraint firstItem="hEe-zr-kUm" firstAttribute="top" secondItem="JI4-3l-zbO" secondAttribute="top" id="mdm-2w-mOh"/>
                             <constraint firstItem="hEe-zr-kUm" firstAttribute="trailing" secondItem="JI4-3l-zbO" secondAttribute="trailing" id="nNu-xL-09Z"/>
                             <constraint firstItem="hEe-zr-kUm" firstAttribute="leading" secondItem="JI4-3l-zbO" secondAttribute="leading" id="s1D-V1-azE"/>
